feat: meta data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>오늘의 운전</title>
+    <meta content="오늘의 운전과 함께 운전 고수가 되어보아요" name="description" />
+    <meta content="오늘의 운전 - 운전 연수 예약 플랫폼" property="og:title" />
+    <meta content="오늘의 운전과 함께 운전 고수가 되어보아요" property="og:description" />
+    <meta content="오늘의 운전" property="og:site_name" />
+    <meta content="https://www.odriving.site" property="og:url" />
+    <meta content="./public/open-graph.png" property="og:image" />
+    <meta content="summary_large_image" name="twitter:card" />
   </head>
   <body>
     <div id="root"></div>
